fix: file input overflows

--- a/src/components/atoms/FileInput/fileInput.module.css
+++ b/src/components/atoms/FileInput/fileInput.module.css
@@ -1,4 +1,8 @@
 @layer ye-components {
+  .root {
+    width: 100%;
+  }
+
   .wrapper {
     position: relative;
     display: flex;
